--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar"> 
      <!-- box1 -->
             <div class="navlogo border"  >
-                    <div class="logo"></div>
+                    <div  class ="logo" style="background-image: url('logo.png');"></div>
              </div>
  <!-- box2 -->
              <div class="nav-add border">
