--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </div>
 </header>
 <!-- hero-section  -->
-<div class="hero-section" style="background-image: url('scroll.jpg')">
+<div class="hero-section" style="background-image: url('scroll.webp')">
         <div class="hero-msg">
             <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. 
                 <a>Click here to go to amazon.in</a>
