--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="hero-section" style="background-image: url('scroll.webp')">
         <div class="hero-msg">
             <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. 
-                <a>Click here to go to amazon.in</a>
+                <a href="https://www.amazon.in/">Click here to go to amazon.in</a>
             </p>
         </div>
 </div>
